--- a/style.css
+++ b/style.css
@@ -1,110 +1,64 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 body{
-    height: 100%;
-    background-color: #111;
-    font-weight: 50;
-    margin: 1rem 0 3rem;
-    text-align: center;
-    color: #fff;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background: url(wall3.jpg);
+    background-size: cover;
 }
 
-h1{
-    font-size: 3rem;
-    font-weight: 50;
-    margin: 1rem 0 3rem;
-    text-align: center;
-    color: #fff;
-    font-family: 'Hind' , sans-serif;
-}
-
-.styling{
-    font-weight: 800;
-    color: crimson;
-}
-
-.input_div{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.box{
+    width: 300px;
+    padding: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0,0,0,0.4);
     text-align: center;
 }
 
-.input_div .input{
-    padding: 0.5rem 1rem;
-    height: 50px;
+.box h1{
+    color: white;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.box input[type="text"],.box input[type="password"]{
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 3px solid #0367fd;
+    padding: 14px 10px;
+    width: 220px;
     outline: none;
-    border: none;
-    background-color: #fff;
-    width: 450px;
-    font-size: 1.15rem;
-    margin: 0.25rem;
-    border-radius: 25px;
-}
-
-.addButton{
-    height: 50px;
-    width: 50px;
-    border-radius: 25px;
-    outline: none;
-    border: none;
-    background-color: #fff;
-    color: #fff;
-    margin: 0.25rem;
-    background-color: crimson;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25px;
     cursor: pointer;
 }
 
-.addButton:hover{
-    opacity: 0.7;
+.box input[type="text"]:focus,.box input[type="password"]:focus{
+    width: 270px;
+    border-color: #ffc400ec;
 }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.box input[type="submit"]{
+    border: 0;
+    background: none;
+    display: block;
+    margin: 20px auto;
     text-align: center;
-    margin-top: 2rem;
-}
-
-.item{
-    padding: 0.5rem;
-    margin-bottom: 1.5rem;
-    border-bottom: 4px solid #fff;
-}
-
-.item_input{
-    background: none;
+    border: 3px solid #ffc400ec;
+    padding: 14px 10px;
     outline: none;
-    color: #fff;
-    border: none;
-    width: 350px;
-    font-size: 1.4rem;
-}
-
-.editButton{
-    font-size: 1.4rem;
-    margin: 0 0.5rem;
-    font-family: 'Hind' sans-serif;
-    background: none;
-    outline: none;
-    color: lime;
-    border: none;
+    color: white;
+    border-radius: 24px;
+    transition: 0.25px;
     cursor: pointer;
 }
 
-.removeButton{
-    font-size: 1.4rem;
-    margin: 0 0.75rem;
-    font-family: 'Hind' sans-serif;
-    background: none;
-    outline: none;
-    color: #E00;
-    border: none;
-    cursor: pointer;
+.box input[type="submit"]:hover{
+    background: #ffc400ec;
 }
